src/objects/Catalogo__c.object
<CustomObject>
    <fields>
        <fullName>Abreviatura__c</fullName>
        <label>Abreviatura</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baja__c</fullName>
        <label>Baja</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConceptoFijo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Aplica para concepto de pagos</inlineHelpText>
        <label>Concepto Fijo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IdInternoBanco__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno Banco</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdInternoConcepto__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id Interno Concepto</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdInternoFormaPago__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno forma de pago</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdInternoNivel__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno Nivel</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdInternoPeriodicidad__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno Periodicidad</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IdProfesion__c</fullName>
        <label>IdProfesión</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdTipoTarjeta__c</fullName>
        <description>Id Tipo de Tarjeta</description>
        <label>Id tipo tarjeta</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letra__c</fullName>
        <label>Letra</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MontoCostoFijo__c</fullName>
        <label>Monto Costo Fijo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NombreCampoCandidato__c</fullName>
        <description>Captura del nombre del campo relacionado al concepto de pago en candidato</description>
        <label>Nombre campo candidato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumEvaluaciones__c</fullName>
        <label>Num. Evaluaciones</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orden__c</fullName>
        <description>Aplica para Nivel</description>
        <label>Orden</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TipoCatalogo__c</fullName>
        <label>Tipo catálogo</label>
        <picklist>
            <picklistValues>
                <fullName>Concepto Pagos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nivel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modalidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requisitos de Beca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodicidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesión</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forma de pago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Catálogo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Letra__c</columns>
        <columns>NAME</columns>
        <columns>TipoCatalogo__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Nivel</fullName>
        <columns>IdInternoNivel__c</columns>
        <columns>NAME</columns>
        <columns>Letra__c</columns>
        <columns>Orden__c</columns>
        <columns>NumEvaluaciones__c</columns>
        <columns>TipoCatalogo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TipoCatalogo__c</field>
            <operation>equals</operation>
            <value>Nivel</value>
        </filters>
        <label>Nivel</label>
    </listViews>
    <nameField>
        <label>Nombre de Catálogo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catálogos</pluralLabel>
    <recordTypes>
        <fullName>Banco</fullName>
        <active>true</active>
        <label>Banco</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConceptoPago</fullName>
        <active>true</active>
        <description>Crear nuevo registro del tipo Concepto de Pago</description>
        <label>Concepto de pago</label>
    </recordTypes>
    <recordTypes>
        <fullName>FormaPago</fullName>
        <active>true</active>
        <label>Forma de pago</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modalidad</fullName>
        <active>true</active>
        <description>Crear nuevo registro del tipo Modalidad</description>
        <label>Modalidad</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nivel</fullName>
        <active>true</active>
        <description>Crear nuevo registro del tipo Nivel</description>
        <label>Nivel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Periodicidad</fullName>
        <active>true</active>
        <label>Periodicidad</label>
    </recordTypes>
    <recordTypes>
        <fullName>Profesion</fullName>
        <active>true</active>
        <label>Profesión</label>
    </recordTypes>
    <recordTypes>
        <fullName>TipoTarjeta</fullName>
        <active>true</active>
        <description>Tipo de Tarjeta</description>
        <label>Tipo Tarjeta</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>